# aymaraLang

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  LICENSE  Makefile  Makefile.macos  README.md  build.bat  index.html  mkdocs.yml  package-lock.json  package.json  rosindex.yaml  search.html
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  pages.yml
arquitectura/: index.html
artifacts/: AymaraLang-Setup.msi  AymaraLang-Setup.wixpdb
aymaraLang/: index.html
aymlang/: CHANGELOG.md  README.md  aymlang-0.0.1.vsix  aymlang-0.0.2.vsix  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
aymlang/snippets/: aym.json
aymlang/src/: extension.js
aymlang/syntaxes/: aym.tmLanguage.json
benchmarks/: pipeline_summary_2026_02_16_compile_only.json  pipeline_summary_2026_02_16_full.json  pipeline_thresholds.json
benchmarks/baseline_2026_02_15/: index.html
benchmarks/pipeline_2026_02_16/: index.html
compiler/: index.html  main.cpp
compiler/ast/: README.md  ast.cpp  ast.h  ast_json.cpp  ast_json.h
compiler/backend/: backend.cpp  backend.h
compiler/builtins/: builtins.cpp  builtins.h
compiler/codegen/: README.md  codegen.cpp  codegen.h  codegen_call_args.cpp  codegen_class.cpp  codegen_collect_expr.cpp  codegen_collect_global_try.cpp  codegen_collect_stmt.cpp  codegen_emit_driver.cpp  codegen_emit_sections.cpp  codegen_expr.cpp  codegen_expr_call.cpp  codegen_expr_call_collections.cpp  codegen_expr_call_fs_array.cpp  codegen_expr_call_io.cpp  codegen_expr_call_math.cpp  codegen_expr_call_string.cpp  codegen_expr_call_system.cpp  codegen_expr_ops.cpp  codegen_function.cpp  codegen_helpers.cpp  codegen_helpers.h  codegen_impl.h  codegen_stmt.cpp  codegen_stmt_basic.cpp  codegen_stmt_control.cpp  codegen_stmt_exception.cpp  codegen_type_detect.cpp  codegen_type_print.cpp
compiler/interpreter/: interpreter.cpp  interpreter.h
compiler/lexer/: README.md  lexer.cpp  lexer.h  lexer_comments_symbols.cpp  lexer_keywords.cpp  lexer_literals.cpp  lexer_tokenize.cpp
compiler/parser/: README.md  parser.cpp  parser.h  parser_class.cpp  parser_expr_factor.cpp  parser_expr_literals.cpp  parser_expr_ops.cpp  parser_expr_primary.cpp  parser_statement_core.cpp  parser_statement_helpers_basic.cpp  parser_statement_helpers_flow.cpp  parser_statements_extra.cpp
compiler/semantic/: semantic.cpp  semantic.h  semantic_class.cpp  semantic_class_collect.cpp  semantic_class_lookup.cpp  semantic_class_visit.cpp  semantic_expr.cpp  semantic_expr_basic.cpp  semantic_expr_call.cpp  semantic_stmt.cpp
compiler/utils/: README.md  class_names.h  diagnostic.cpp  diagnostic.h  diagnostic_catalog.cpp  diagnostic_catalog.h  driver.cpp  driver.h  error.cpp  error.h  fs.h  module_resolver.cpp  module_resolver.h  module_resolver_resolve.cpp  process.cpp  process.h  project_manifest.cpp  project_manifest.h  project_tool.cpp  project_tool.h  semver.cpp  semver.h  utils.cpp  utils.h
docs/: BUILD.md  Makefile  README.md  arquitectura.md  aymaraLang.md  build-quick.md  build.md  compiler.md  exceptions.md  grammar.md  guide.md  index.md  indice.md  install.md  installer_improvement_plan.md  installers.md  investigacion.md  language.md  manual_pdf.md  manual_usuario.md  modernizacion.md  overview.md  project.md  repl.md  slides11.md
docs/benchmarks/: baseline_2026_02_15.md  pipeline_2026_02_16.md  pipeline_summary_2026_02_16_compile_only.json  pipeline_summary_2026_02_16_full.json  pipeline_thresholds.json
docs/javascripts/: mermaid-init.js  scroll-top.js
docs/research/: README.md  articulo.tex  articulo.txt  investigacion.md
docs/source/: conf.py  index.rst
docs/stylesheets/: extra.css
docs/systems_engineering/: architecture.md  conops.md  index.md  interface_control_document.md  requirements.md  risk_management.md  systems_engineering_management_plan.md  verification_validation_plan.md
exceptions/: index.html
grammar/: index.html
guide/: index.html
indice/: index.html
install/: index.html
installer/: EULA.rtf  EULA.txt  aymaralang.nsi
installer/wix/: AymaraLang.wixproj  Product.wxs
installers/: index.html
investigacion/: index.html
javascripts/: mermaid-init.js  scroll-top.js
language/: index.html
llvm-backend/: llvm_backend.marker
manual_usuario/: index.html
modernizacion/: index.html
overview/: index.html
packaging/deb/: aymaralang.desktop  aymaralang.xml  control  postinst  postrm
project/: index.html
research/: articulo.tex  articulo.txt  index.html
research/investigacion/: index.html
runtime/: README.md  math.c  runtime.c  runtime_arrays.c  runtime_exceptions.c  runtime_gfx_linux.c  runtime_maps_strings.c
samples/: README.md  advanced_ops.aym  aymara_flow.aym  bucles.aym  calculadora.aym  comments.aym  compare.aym  condloop.aym  else.aym  for.aym  for_loops.aym  func.aym  hola.aym  if_switch.aym  input.aym  length.aym  logic.aym  loop.aym  module_demo.aym  negativos.aym  ops.aym  random.aym  range_for.aym  recursion.aym  return.aym  runtime.aym  string.aym  switch.aym  tetris.aym  vars.aym  while.aym
samples/apps/: arkata_stdlib.aym  assert_y_salida.aym  banca_excepciones.aym  inventario_archivo.aym  n_reinas.aym  regresion_llamadas.aym
samples/basics/: comments.aym  hola.aym  input.aym  vars.aym
samples/bench/: README.md  check_pipeline_thresholds.ps1  pipeline_bench.aym  run_pipeline_bench.ps1
scripts/: README.md  aymara_installer.nsi  aymara_installer.wxs  build_all.ps1  build_deb.sh  build_dist.ps1  build_msi.ps1  build_nsis.ps1  build_windows_installer.ps1  build_windows_installer_msi.ps1  install_deps_linux.sh  install_deps_windows.ps1  publish_extension.ps1  test_deb.sh  test_samples.sh
search/: search_index.json
stylesheets/: extra.css
systems_engineering/: index.html
tests/: README.md  backend_ir_smoke.cmake  basic.sh  diagnostics_smoke.cmake  installer_windows_smoke.ps1  linux_gui_smoke.sh  lock_contract_smoke.cmake  packaging_smoke.sh  pipeline_modes_smoke.cmake  run_tests.sh  test_modulos_auto.ps1  wrapper_smoke.cmake
vscode-extension/: README.md  package.json
(+147 files in other folders)
